bk_ida/gccida/g0/set_mem_alias_set
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2321:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2325:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2328:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2332:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2344:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2348:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2349:21: error: expected expression
v6 = *( tree_node **)( *( _QWORD *)&mem[1] + 8LL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/emit-rtl.c:2349:9: error: use of undeclared identifier 'tree_node'
v6 = *( tree_node **)( *( _QWORD *)&mem[1] + 8LL); 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_mem_alias_set/src/obj/emit-rtl.o] Error 1
